--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -13,6 +13,7 @@
 }
 body {
     font-family: 'Bellefair', serif;
+    height: 100vh;
 }
 /* begin global rules */
 h1 {
@@ -57,6 +58,7 @@ a {
 .nav >img.hamburger {
     display: none;
     cursor: pointer;
+    transition: var(--main-transition);
 }
 ul.navbar {
     display: flex;
@@ -68,6 +70,7 @@ ul.navbar {
     height: 96px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(16px);
+    transition: var(--main-transition);
 }
 ul.navbar li {
     margin-right: 50px;
@@ -115,26 +118,25 @@ ul.navbar li:hover::after {
         z-index: 3;
     }
     ul.navbar {
-        display: none;
-    }
-    ul.navbar li {
-        margin: 0;
-    }
-    ul.navbar span {
-        display: unset;
-    }
-    ul.navbar.active {
-        position: absolute;
-        display: flex;
+        position: fixed;
         flex-direction: column;
         align-items: flex-start;
-        right: 0;
+        right: -100%;
         top: 0;
         width: 70%;
         height: 100%;
         gap: 40px;
         padding-top: 150px;
         z-index: 2;
+    }
+    ul.navbar.active {
+        right: 0;
+    }
+    ul.navbar li {
+        margin: 0;
+    }
+    ul.navbar span {
+        display: unset;
     }
     ul.navbar li.active::after,
     ul.navbar li:hover::after {
