--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,14 @@
     background: no-repeat url("../assets/home/background-home-desktop.jpg");
     background-size: cover; 
     background-position: 100%;
-    /* height: 100vh; */
+    overflow: hidden;
 }
 .home .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: calc(100vh - 136px);
-    gap: 50px;
+    gap: 150px;
 }
 .home .container .content {
     flex: 1;
@@ -23,10 +23,39 @@
     justify-content: center;
     background-color: var(--white-color);
     border-radius: 50%;
+    font-size: 32px;
+    transition: var(--main-transition);
+}
+.home .container .explore:hover {
+    outline: 50px solid rgba(255, 255, 255, 0.5);
+    opacity: 0.8;
 }
 /* MEDIA QUERIES */
 @media (max-width: 1199px) {
     .home {
-        background-image: no-repeat url("../assets/home/background-home-tablet.jpg");
+        background-image: url("../assets/home/background-home-tablet.jpg");
+    }
+    .home .container {
+        height: unset;
+        padding: 100px 0px;
+        text-align: center;
+        flex-direction: column;
+        gap: 100px;
+    }
+}
+@media (max-width: 768px) {
+    .home {
+        background-image: url("../assets/home/background-home-mobile.jpg");
+    }
+    .home .container .content h1 {
+        font-size: 100px;
+        margin-bottom: 20px;
+    }
+    .home .container .content h5{
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .home .container .explore {
+        font-size: 24px;
     }
 }
