--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,11 @@
     outline: 50px solid rgba(255, 255, 255, 0.5);
     opacity: 0.8;
 }
-/* end home section */
-/* begin destination section */
+
+/* begin destination */
 .destination {
     background: no-repeat url("../assets/destination/background-destination-desktop.jpg");
     background-size: cover; 
-    background-position: 100%;
     overflow-x: hidden;
 }
 .destination .container {
@@ -72,7 +71,6 @@
     margin-bottom: 20px;
 }
 .destination .tab-content .content p {
-    line-height: 1.6;
     margin-bottom: 10px;
 }
 .destination .tab-content .content hr {
@@ -87,6 +85,57 @@
     gap: 50px;
     margin-top: 20px;
 }
+
+/* begin crew */
+.crew {
+    background: no-repeat url("../assets/crew/background-crew-desktop.jpg");
+    background-size: cover; 
+    background-position: 100%;
+    overflow-x: hidden;
+}
+.crew .container {
+    /* height: calc(100vh - 136px); */
+    padding: 50px 0;
+    /* overflow-y: hidden; */
+}
+.crew .tab-content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.crew .tab-content .content h4 {
+    margin: 20px 0;
+}
+.crew .tab-content .content h3 {
+    margin-bottom: 20px;
+}
+.crew .tab-content img {
+    width: 75%;
+    height: 100%;
+}
+.crew .tabs.tabs-mobile {
+    display: none;
+}
+.crew .tabs {
+    display: flex;
+    align-items: center;
+}
+.crew .tabs li {
+    width: 15px;
+    height: 15px;
+    margin-right: 15px;
+    border-radius: 50%;
+    background-color: gray;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+.crew .tabs li.active {
+    background-color: var(--white-color);
+}
+.crew .tabs li:hover {
+    background-color: var(--secondary-color);
+}
+/* /////////////////-------------------////////////////////// */
 /* MEDIA QUERIES */
 @media (max-width: 1199px) {
     /* home */
@@ -128,6 +177,27 @@
     .destination .tab-content .data {
         justify-content: center;
     }
+    /* crew */
+    .crew {
+        background-image: url("../assets/crew/background-crew-tablet.jpg");
+    }
+    .crew .tabs {
+        display: none;
+    }
+    .crew .tabs.tabs-mobile {
+        display: flex;
+        justify-content: center;
+    }
+    .crew .tab-content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .crew .tab-content .content {
+        text-align: center;
+    }
+    .crew .tab-content img {
+        width: 50%;
+    }
 }
 @media (max-width: 768px) {
     .container .title {
@@ -159,5 +229,15 @@
     .destination .tab-content .data {
         flex-direction: column;
         margin-bottom: 20px;
+    }
+    /* crew */
+    .crew {
+        background-image: url("../assets/crew/background-crew-mobile.jpg");
+    }
+    .crew .tabs.tabs-mobile {
+        margin: 20px 0;
+    }
+    .crew .tab-content img {
+        order: -1;
     }
 }
